--- a/Southern_Ocean_Mixotrophy/Antarctic_manuscript_citations_fixed.bib
+++ b/Southern_Ocean_Mixotrophy/Antarctic_manuscript_citations_fixed.bib
@@ -1120,3 +1120,50 @@ url = {https://www.sciencedirect.com/science/article/abs/pii/S0272771411002174},
 volume = {94},
 year = {2011}
 }
+@article{Caron2016,
+author = {Caron, David A.},
+doi = {10.1073/pnas.1600718113},
+file = {:Users/christophercarnivale/Documents/PhD papers/Mixotrophy/Caron2016.pdf:pdf},
+issn = {0027-8424},
+journal = {Proceedings of the National Academy of Sciences},
+number = {11},
+pages = {2806--2808},
+pmid = {26933215},
+title = {{Mixotrophy stirs up our understanding of marine food webs}},
+url = {http://www.pnas.org/lookup/doi/10.1073/pnas.1600718113},
+volume = {113},
+year = {2016}
+}
+@article{Mitra2016,
+abstract = {Arranging organisms into functional groups aids ecological research by grouping organisms (irrespective of phylogenetic origin) that interact with environmental factors in similar ways. Planktonic protists traditionally have been split between photoautotrophic “phytoplankton” and phagotrophic “microzooplankton”. However, there is a growing recognition of the importance of mixotrophy in euphotic aquatic systems, where many protists often combine photoautotrophic and phagotrophic modes of nutrition. Such organisms do not align with the traditional dichotomy of phytoplankton and microzooplankton. To reflect this understanding, we propose a new functional grouping of planktonic protists in an eco-physiological context: (i) phagoheterotrophs lacking phototrophic capacity, (ii) photoautotrophs lacking phagotrophic capacity, (iii) constitutive mixotrophs (CMs) as phagotrophs with an inherent capacity for phototrophy, and (iv) non-constitutive mixotrophs (NCMs) that acquire their phototrophic capacity by ingesting specific (SNCM) or general non-specific (GNCM) prey. For the first time, we incorporate these functional groups within a foodweb structure and show, using model outputs, that there is scope for significant changes in trophic dynamics depending on the protist functional type description. Accordingly, to better reflect the role of mixotrophy, we recommend that as important tools for explanatory and predictive research, aquatic food-web and biogeochemical models need to redefine the protist groups within their frameworks.},
+author = {Mitra, Aditee and Flynn, Kevin J. and Tillmann, Urban and Raven, John A. and Caron, David and Stoecker, Diane K. and Not, Fabrice and Hansen, Per J. and Hallegraeff, Gustaaf and Sanders, Robert and Wilken, Susanne and McManus, George and Johnson, Mathew and Pitta, Paraskevi and V{\aa}ge, Selina and Berge, Terje and Calbet, Albert and Thingstad, Frede and Jeong, Hae Jin and Burkholder, JoAnn and Glibert, Patricia M. and Gran{\'{e}}li, Edna and Lundgren, Veronica},
+doi = {10.1016/J.PROTIS.2016.01.003},
+file = {:Users/christophercarnivale/Library/Application Support/Mendeley Desktop/Downloaded/Mitra et al. - 2016 - Defining Planktonic Protist Functional Groups on Mechanisms for Energy and Nutrient Acquisition Incorporation of D.pdf:pdf},
+issn = {1434-4610},
+journal = {Protist},
+month = {apr},
+number = {2},
+pages = {106--120},
+publisher = {Urban & Fischer},
+title = {{Defining Planktonic Protist Functional Groups on Mechanisms for Energy and Nutrient Acquisition: Incorporation of Diverse Mixotrophic Strategies}},
+url = {https://www.sciencedirect.com/science/article/pii/S1434461016000043},
+volume = {167},
+year = {2016}
+}
+@article{Stoecker2017,
+abstract = {Mixotrophs are important components of the bacterioplankton, phytoplankton, microzooplankton, and (sometimes) zooplankton in coastal and oceanic waters. Bacterivory among the phytoplankton may be important for alleviating inorganic nutrient stress and may increase primary production in oligotrophic waters. Mixotrophic phytoflagellates and dinoflagellates are often dominant components of the plankton during seasonal stratification. Many of the microzooplankton grazers, including ciliates and Rhizaria, are mixotrophic owing to their retention of functional algal organelles or maintenance of algal endosymbionts. Phototrophy among the microzooplankton may increase gross growth efficiency and carbon transfer through the microzooplankton to higher trophic levels. Characteristic assemblages of mixotrophs are associated with warm, temperate, and cold seas and with stratification, fronts, and upwelling zones. Modeling has indicated that mixotrophy has a profound impact on marine planktonic ecosystems and may enhance primary production, biomass transfer to higher trophic levels, and the functioning of the biological carbon pump.},
+author = {Stoecker, Diane K. and Hansen, Per Juel and Caron, David A. and Mitra, Aditee},
+doi = {10.1146/annurev-marine-010816-060617},
+file = {:Users/christophercarnivale/Library/Application Support/Mendeley Desktop/Downloaded/Stoecker et al. - 2017 - Mixotrophy in the Marine Plankton.pdf:pdf},
+issn = {19410611},
+journal = {Annual Review of Marine Science},
+keywords = {Chloroplast-retaining ciliates,Mixotrophic dinoflagellates,Phagotrophic phytoflagellates,Photoheterotrophy,Rhizarian symbioses},
+month = {jan},
+number = {1},
+pages = {311--335},
+pmid = {27483121},
+publisher = {Annual Reviews Inc.},
+title = {{Mixotrophy in the Marine Plankton}},
+volume = {9},
+year = {2017}
+}
